[package]
name = "rla"
version = "0.1.1"
authors = ["maik <maikklein@googlemail.com>"]

description = "generic, n-dimension linear algebra library for game development"

#documentation = "..."
#homepage = "..."
repository = "https://github.com/MaikKlein/rla"

# This points to a file in the repository (relative to this `Cargo.toml`). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["vector", "math"]

license = "Apache-2.0"

[dependencies]
typenum = "1.3.1"
generic-array = "0.3.1"
num = "0.1"
